force-app/main/default/objects/trainer__c/trainer__c.object-meta.xml
<CustomObject>
    <label>trainer</label>
    <nameField>
        <label>trainer Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>trainers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>