force-app/main/default/objects/trainer__c/fields/max__c.field-meta.xml
<CustomField>
    <fullName>max__c</fullName>
    <label>max</label>
    <summarizedField>salary__c.payment__c</summarizedField>
    <summaryForeignKey>salary__c.trainer__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>