force-app/main/default/objects/trainer__c/fields/min__c.field-meta.xml
<CustomField>
    <fullName>min__c</fullName>
    <label>min</label>
    <summarizedField>salary__c.payment__c</summarizedField>
    <summaryForeignKey>salary__c.trainer__c</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>