force-app/main/default/objects/trainer__c/fields/no_of_payments__c.field-meta.xml
<CustomField>
    <fullName>no_of_payments__c</fullName>
    <label>no of payments</label>
    <summaryForeignKey>salary__c.trainer__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>