force-app/main/default/objects/trainer__c/fields/sum__c.field-meta.xml
<CustomField>
    <fullName>sum__c</fullName>
    <label>sum</label>
    <summarizedField>salary__c.payment__c</summarizedField>
    <summaryForeignKey>salary__c.trainer__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>